# lake-native-compiler

./: .gitignore  Cargo.toml  Ideas.md  README.md  build.rs  vgcore.191845
benchmark/: cpu_bench.lake  cpu_bench_cpp.cpp  cpu_bench_go.go  cpu_seq_c.c  results_cpu.md  run_bench.sh
benchmark/cpu_bench_rust/: Cargo.toml
benchmark/cpu_bench_rust/src/: main.rs
examples/: counter.lake  ping_pong.lake  sum.lake
examples/benchmark/: async_cpp.cpp  bench.lake  results.md  results_telegram.txt  run_bench.sh
examples/benchmark/async_rust/: Cargo.toml
examples/benchmark/async_rust/src/: main.rs
examples/simple/: one_worker.lake  simple.lake  use_ptr.lake
examples/simple/other_langs/: async_cpp.cpp  simple.c  simple.cpp
examples/simple/other_langs/async_rust/: Cargo.toml
src/: main.rs
src/compiler/: mod.rs
src/compiler/ctx/: mod.rs  registry.rs  rt_funcs.rs
src/compiler/ctx/compiler_type/: mod.rs
src/compiler/pipeline/: branch.rs  machine.rs  mod.rs
src/compiler/pipeline/expr/: arith_expr.rs  change_state_expr.rs  jump_expr.rs  let_expr.rs  mod.rs  num_expr.rs  pure_expr.rs  spawn_expr.rs  string_expr.rs  var_expr.rs  when_expr.rs
src/compiler/rt/: mod.rs
src/compiler/rt/alloc/: mod.rs
src/compiler/rt/alloc/mmap/: mod.rs
src/compiler/rt/funcs/: alloc.rs  exit.rs  mmap.rs  mod.rs  strings.rs  syscall.rs  write.rs
src/compiler/rt/layout/: exec_ctx.rs  fat_ptr.rs  mod.rs  process_ctx.rs  sheduler_ctx.rs
src/compiler/rt/process/: mod.rs
src/compiler/rt/rt_utils/: mod.rs
src/compiler/rt/rw/: mod.rs
src/compiler/rt/scheduler/: mod.rs
(+5 files in other folders)
